# equation_test_task

./: Dockerfile  README.md  main.py  pyproject.toml
